# MELT_ENGINE

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
MeltEngineEditorLib/: CMakeLists.txt
MeltEngineEditorLib/include/: ConsoleGUI.h  MeltEngineEditor.h  SpriteEditorGUI.h
MeltEngineEditorLib/include/ScriptEditor/: ScriptEditorGUI.h
MeltEngineEditorLib/src/: ConsoleGUI.cpp  MeltEngineEditor.cpp  SpriteEditorGUI.cpp
MeltEngineEditorLib/src/ScriptEditorGUI/: ScriptEditorGUI.cpp
MeltEngineLib/: CMakeLists.txt  MeltEngine_install.cmake
MeltEngineLib/ECS/: ComponentArray.cpp  ComponentManager.cpp  Coordinator.cpp  Coordinator.h  EntityManager.cpp  Event.cpp  EventManager.cpp  SystemManager.cpp
MeltEngineLib/ECS/Components/: Transform.cpp
MeltEngineLib/ECS/Components/include/: Camera.h
MeltEngineLib/ECS/Systems/: CameraControlSystem.cpp
MeltEngineLib/ECS/Systems/include/: CameraControlSystem.h
MeltEngineLib/ECS/include/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  EventManager.h  SystemManager.h  Type.h
MeltEngineLib/include/: CRC32.h  Core.h  GizmosTransform.h  InputSystem.h  MeltEngine.h  Mesh.h  Node.h  NodeManager.h  Quad.h  RayCast.h  Reflection.h  Shader.h  TextureManager.h  Vertex.h
MeltEngineLib/include/ECS/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  SystemManager.h
MeltEngineLib/include/ECS/Components/: Camera.h  Renderer.h  SpriteRenderer.h  Transform.h
MeltEngineLib/include/ECS/Systems/: CameraControlSystem.h  RenderSystem.h
MeltEngineLib/include/EventSystem/: Event.h  EventHandler.h  EventHandlerWrapper.h  EventManager.h  IEventHandlerWrapper.h  KeyEvent.h
MeltEngineLib/include/MathLib/: Vector.h
MeltEngineLib/include/Primitive/: Cube.h  Quad.h
MeltEngineLib/include/Renderer/: FrameBuffer.h  Line.h  Quad.h  RenderPipeline.h  RendererAPI.h  Shader.h
MeltEngineLib/include/Resources/: MeshImporter.h
MeltEngineLib/res/shaders/: 2DGrid.shader  3DGrid.shader  Basic.shader  CheckerboardPattern.shader  GizmosAxis.shader  Line.shader  MeshOutline.shader  Phong.shader  Texture.shader  TextureOutline.shader
MeltEngineLib/src/: Core.cpp  GizmosTransform.cpp  InputSystem.cpp  MeltEngine.cpp  Node.cpp  NodeManager.cpp  Quad.cpp  RayCast.cpp  Shader.cpp  TextureManager.cpp  Vertex.cpp
MeltEngineLib/src/ECS/: ComponentArray.cpp  ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  Event.cpp  EventManager.cpp  SystemManager.cpp
MeltEngineLib/src/ECS/Components/: Camera.cpp  Renderer.cpp  SpriteRenderer.cpp  Transform.cpp
MeltEngineLib/src/ECS/Systems/: CameraControlSystem.cpp  RenderSystem.cpp
MeltEngineLib/src/EventSystem/: Event.cpp  EventHandler.cpp  EventHandlerWrapper.cpp  EventManager.cpp
MeltEngineLib/src/MathLib/: Vector.cpp
MeltEngineLib/src/Primitive/: Cube.cpp  Quad.cpp
MeltEngineLib/src/Renderer/: FrameBuffer.cpp  Line.cpp  Quad.cpp  RenderPipeline.cpp  RendererAPI.cpp  Shader.cpp
MeltEngineLib/src/Resources/: MeshImporter.cpp
MeltEngineLib/vendors/assimp/: revision.h
Project/: CMakeLists.txt
Project/Resources/Textures/: blacknwhite.yaml
Project/Scripts/: CMakeLists.txt  TestCustomSystem.cpp  TestCustomSystem.h
